fix z-index issue

--- a/app/navigation/navigation.module.css
+++ b/app/navigation/navigation.module.css
@@ -72,7 +72,7 @@
   left: 0;
   width: 100vw;
   pointer-events: none;
-  z-index: 1;
+  z-index: 1000;
 }
 
 .topBar {
